typescript/checker/tests/conformance/es2017/useSharedArrayBuffer4.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            51,
        ),
        hi: BytePos(
            68,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es2017/useSharedArrayBuffer4.ts:4:16
  |
4 | var foge = new SharedArrayBuffer(1024);
  |                ^^^^^^^^^^^^^^^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            87,
        ),
        hi: BytePos(
            91,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es2017/useSharedArrayBuffer4.ts:5:11
  |
5 | var bar = foge.slice(1, 10);
  |           ^^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            121,
        ),
        hi: BytePos(
            125,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es2017/useSharedArrayBuffer4.ts:6:15
  |
6 | var species = foge[Symbol.species];
  |               ^^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            160,
        ),
        hi: BytePos(
            164,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es2017/useSharedArrayBuffer4.ts:7:17
  |
7 | var stringTag = foge[Symbol.toStringTag];
  |                 ^^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            197,
        ),
        hi: BytePos(
            201,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es2017/useSharedArrayBuffer4.ts:8:11
  |
8 | var len = foge.byteLength;
  |           ^^^^

